--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "3"
-members = [ "bolt-derive","bolt-rs", "bolt-sys", "bolt-wasm"]
+members = ["bolt-rs", "bolt-sys", "bolt-wasm"]
