--- a/bolt-rs/Cargo.toml
+++ b/bolt-rs/Cargo.toml
@@ -2,3 +2,10 @@
 name = "bolt-rs"
 version = "0.1.0"
 edition = "2024"
+
+[dependencies]
+bolt-sys = { path = "../bolt-sys" }
+bolt-derive = { path = "../bolt-derive" }
+thiserror = "2.0.17"
+paste = "1.0"
+anyhow = "1.0"
